Structured a little bit the files

--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -22,10 +22,8 @@
    "source": [
     "from normalization_functions import *\n",
     "from analytics_functions import *\n",
-    "from gender_classifier import *\n",
-    "from visualizations_functions import *\n",
-    "from testNRCLEX import *\n",
-    "from plotnine import ggplot, aes, geom_bar"
+    "from sentiment_functions import *\n",
+    "from visualizations_functions import *"
    ]
   },
   {
