--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -1777,7 +1777,8 @@
     "f_proper_nouns_set.add(\"fauntleroy\")\n",
     "f_proper_nouns_set.add(\"oddity\")\n",
     "f_proper_nouns_set.add(\"earl's\")\n",
-    "f_proper_nouns_set.add(\"hobbs\")"
+    "f_proper_nouns_set.add(\"hobbs\")\n",
+    "f_proper_nouns_set.add(\"moss\")"
    ]
   },
   {
