--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b><span style=\"color:red\">ANDARE A CERCARE LE PAROLE COMUNI DI UN CORPUS ALL'INTERNO DELL'ALTRO E VEDERE SE SONO ASSOCIATE A MASCHILI O FEMMINILI ANDANDO A CALCOLARE IL RATIO</span></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Color palette:"
    ]
   },
